--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.ent.theprojectfactory.qchef",
+  "appId": "com.theprojectfactory.qchef",
   "appName": "QChef",
   "bundledWebRuntime": false,
   "npmClient": "npm",
