--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@capacitor/android": "^2.0.1",
-    "@capacitor/core": "2.0.0",
+    "@capacitor/android": "^2.4.9",
+    "@capacitor/core": "^2.4.9",
     "@capacitor/ios": "^2.4.2",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
